# P_github

./: .gitignore  .mypy.conf  .pdm-python  .pre-commit-config.yaml  .ruff.conf  Makefile  Makefile_Windows  README.md  coverage.json  coverage_output.txt  pyproject.toml  template_conf_py.txt
.github/workflows/: generate-docs.yml
src/python_project_template/processings/: __init_.py  dummy.py
tests/python_project_template/test_processings/: test_dummy.py
